# libtrace

./: .gitignore  LICENSE.txt  Makefile.am  README.rst  bootstrap  configure.ac
doc/: .gitignore  BUILD.rst  DeveloperGuide.rst  Makefile.am  conf.py.in
lib/: .gitignore  Makefile.am  trace.c  trace.h
lib/cobaro-trace0/: Doxyfile.in  trace.h
lib/libcobaro-trace0/: .gitignore  Doxyfile.in  Makefile.am  trace.h
m4/: .gitignore  Makefile.am
script/: Makefile.am  build.sh
test/: .gitignore  Makefile.am  greatest.h  test-trace.c
