# COPYRIGHT_BEGIN
# Copyright (C) 2015, cobaro.org
# All rights reserved.
# COPYRIGHT_END

lib_LTLIBRARIES = libcobaro-trace0.la

libcobaro_trace0_ladir = $(includedir)/libcobaro-trace0

libcobaro_trace0_la_HEADERS = \
	cobaro-trace0/trace.h

libcobaro_trace0_la_SOURCES = \
	trace.c

AM_CPPFLAGS = \
	@CPPFLAGS@
